Reproduced course example. Started website

--- a/index.html
+++ b/index.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
 <html>
-
     <head>
         <meta charset="UTF-8">
+        <!--
         <link rel="stylesheet" type="text/css" href="./reset.css" />
         <link rel="stylesheet" type="text/css" href="./style.css" />
-        <title>CSS Box model</title>
+        -->
+        <title>Study</title>
+
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        
+        .first {
+            background-color: black;
+            color: white;
+            margin: 50px 10px;
+            padding: 5px;
+            border-style: solid;
+            border-color: lightpink;
+            text-align: center;
+            text-transform: uppercase;
+        }
+    </style>
+
     </head>
-    
     <body>
-        <h1> Main Page </h1>
-        <div class="text">
-            Does this work?
+        <div class="first">
+            this is a div
         </div>
-        <div class="another">
-            Sure it does!
+        <div class="second">
+            this is another div
         </div>
     </body>
-
-
 </html>
