Finished some website layouts. Formatted about section.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <!--
-        <link rel="stylesheet" type="text/css" href="./reset.css" />
-        <link rel="stylesheet" type="text/css" href="./style.css" />
-        -->
         <title>Study</title>
 
     <style>
@@ -13,26 +9,59 @@
             margin: 0;
             padding: 0;
         }
+
+        header {
+            margin: 5vh;
+            text-align: center;
+            font-size: 50px;
+        }
         
         .first {
+            display: flex; 
+            justify-content: space-around;
+           
             background-color: black;
             color: white;
-            margin: 50px 10px;
-            padding: 5px;
-            border-style: solid;
-            border-color: lightpink;
-            text-align: center;
-            text-transform: uppercase;
+            border: 5px solid lightpink;
+
+            height: 20vh;
+            font-size: 1rem;
         }
     </style>
-
     </head>
+
     <body>
+        <header>
+            This is the website header.
+            Look how beautiful it is!
+        </header>
         <div class="first">
-            this is a div
-        </div>
-        <div class="second">
-            this is another div
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            Mauris varius eget sapien sit amet sollicitudin. 
+            Integer luctus cursus quam at fringilla. 
+            Aenean egestas quam urna, nec luctus arcu auctor eu.
+            Donec facilisis nisl vel ante accumsan, ut tincidunt ligula 
+            venenatis. Fusce ultricies enim non molestie iaculis. 
+            Aenean sodales vulputate enim, ac accumsan sapien interdum 
+            vitae. Nam lobortis mattis urna et viverra. Phasellus 
+            tempor justo nec diam fringilla feugiat. Donec ultricies nec 
+            augue sit amet lobortis. Curabitur ligula augue, 
+            accumsan vel condimentum nec, fringilla ut lorem. 
+            Vestibulum non congue tortor. Donec mattis nunc a 
+            bibendum suscipit.
+            </p>
+            <p> Nam facilisis arcu sed ipsum auctor malesuada. 
+            Donec sem risus, fermentum id velit in, rutrum 
+            tempor justo. Nunc dolor tellus, laoreet vitae 
+            porttitor ut, faucibus et diam. Sed venenatis dapibus 
+            risus id ultricies. Duis eget tortor magna. Fusce 
+            condimentum tincidunt quam. Sed ac tellus facilisis, 
+            fermentum erat in, condimentum sem. Phasellus mollis 
+            dolor sit amet pulvinar finibus. Morbi vel convallis 
+            massa, eget mollis justo. Nunc elementum, nibh 
+            id sagittis malesuada, dui felis lobortis risus, quis 
+            tempor tellus diam tempus arcu.
+            </p>
         </div>
     </body>
 </html>
