Template of gallery html. Need to create layout of text.

--- a/website/about.html
+++ b/website/about.html
@@ -22,33 +22,36 @@
                 About this site
             </h2>
             <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-            Etiam eu hendrerit diam. Maecenas fermentum nulla enim, 
-            in rutrum nibh lobortis in. Morbi vitae sapien ullamcorper, 
-            pulvinar orci eget, interdum sem. Phasellus eu eros vitae 
-            arcu iaculis placerat. Vivamus non vehicula ligula. 
-            Duis vel pellentesque urna. Quisque leo nulla, 
-            placerat vitae felis ac, dictum dictum erat. 
-            In ut molestie massa. Donec accumsan pretium vestibulum. 
-            Cras efficitur lacus sit amet ex tincidunt, 
-            vitae dapibus felis faucibus. Sed lacinia odio et nunc congue, 
-            vulputate maximus mauris malesuada. Aenean condimentum, 
-            justo in interdum consequat, dui magna blandit felis, 
-            posuere viverra enim mi ac nisl.
+            This personal website archives my notes. </br>
+            My main interests are Machine Learning, Probability theory and
+            Computer science. </br>
+            Notes can be either studying material on subjects that I wish
+            to master </br>
+            Or some research problems that I have been interest into </br>
+
+            This blog originated on a mixed ambitious idea of 
+            trying to write about these topics and possibly learn from
+            others.</br>
+
+            Very interested in modelling non-stationary time series such 
+            as self-driving cars, speech recognition and 
+            market modelling</br>
+
             </p>
 
             <h2>
                 About me
             </h2>
             <p>
-            Quisque ut lacus sem. Mauris imperdiet mi justo, 
-            id imperdiet est elementum nec. Fusce id posuere odio. 
-            Nulla odio arcu, placerat in fermentum nec, volutpat in dui. 
-            Proin vitae eros at arcu varius egestas quis at turpis. 
-            Cras ut odio sit amet lacus pretium tincidunt. 
-            Curabitur accumsan lectus orci, id fermentum nibh interdum a. 
-            Nunc urna mi, interdum id scelerisque quis, imperdiet non dolor. 
-            Nullam non aliquet odio. Nulla facilisi.
+            I am Henrique Flores, a quantitative analyst&#47;data scientist at
+            M. Safra &amp; Co. 
+            I hold a PhD in theoretical physics from IFT-UNESP;</br>
+            I am very interested in computer science and firmly believe
+            that C is the best language ever invented &mdash; which does
+            not imply that any other language does not have useful features</br>
+            I also program in R, Python and Mathematica. Currently starting on
+            Julia. I plan to use evetually all these languages in posts
+            whatever I feel like</br>
             </p>
         </section>
 
