--- a/website/index.html
+++ b/website/index.html
@@ -14,10 +14,10 @@
 
     <body>
         <ul class="navlinks">
-            <li><a href="#">Machine Learning</a></li>
-            <li><a href="#">Probability and Statistics</a></li>
-            <li><a href="#">Physics</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="gallery.html">Machine Learning</a></li>
+            <li><a href="gallery.html">Probability and Statistics</a></li>
+            <li><a href="gallery.html">Physics</a></li>
+            <li><a href="gallery.html">Blog</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
 
@@ -38,7 +38,7 @@
 
 
         <footer>
-            Copyright Henrique Flores 2021.
+            &copy;Copyright Henrique Flores 2021.
        </footer>
 
     </body>
